--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "shopTackleTumbi",
-    "slug": "shopTackleTumbi",
+    "name": "shopTackleTimbu",
+    "slug": "shopTackleTimbu",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
